--- a/app/src/main/res/values-v19/styles.xml
+++ b/app/src/main/res/values-v19/styles.xml
@@ -8,8 +8,14 @@
         <item name="android:windowBackground">@android:color/transparent</item>
     </style>
 
-    <style name="AppBaseTheme.PhotoTheme">
+    <!-- 这个用来处理大图界面，底部导航透明 -->
+    <style name="AppBaseTheme.BigPhotoTheme">
         <item name="android:windowTranslucentStatus">true</item>
         <item name="android:windowTranslucentNavigation">true</item>
+    </style>
+
+    <!-- 这个用来处理图集界面 -->
+    <style name="AppBaseTheme.PhotoSetTheme">
+        <item name="android:windowTranslucentStatus">true</item>
     </style>
 </resources>
