--- a/app/src/main/res/menu/nav_drawer.xml
+++ b/app/src/main/res/menu/nav_drawer.xml
@@ -8,7 +8,14 @@
             android:title="新闻"/>
         <item
             android:id="@+id/nav_photos"
-            android:icon="@drawable/ic_menu_gallery"
+            android:icon="@android:drawable/ic_menu_gallery"
             android:title="图片"/>
+    </group>
+
+    <group android:checkableBehavior="none">
+
+        <item android:id="@+id/nav_setting"
+              android:icon="@android:drawable/ic_menu_manage"
+              android:title="设置"/>
     </group>
 </menu>
