--- a/app/src/main/res/layout/layout_photos.xml
+++ b/app/src/main/res/layout/layout_photos.xml
@@ -36,9 +36,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 app:tabMode="fixed"
+                app:tabGravity="center"
                 app:tabIndicatorColor="@android:color/white"/>
         </android.support.design.widget.AppBarLayout>
-
 
         <android.support.v4.view.ViewPager
             android:id="@+id/view_pager"
