更新视频播放

--- a/app/src/main/res/values-v19/styles.xml
+++ b/app/src/main/res/values-v19/styles.xml
@@ -15,7 +15,7 @@
     </style>
 
     <!-- 这个用来处理图集界面 -->
-    <style name="AppBaseTheme.PhotoSetTheme">
+    <style name="AppBaseTheme.TranslucentStatus">
         <item name="android:windowTranslucentStatus">true</item>
     </style>
 </resources>
