--- a/app/src/main/res/layout/activity_video_player.xml
+++ b/app/src/main/res/layout/activity_video_player.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -21,21 +22,33 @@
         android:orientation="horizontal">
 
         <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:id="@+id/iv_video_share"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:background="@drawable/sel_btn_press_bg"
             android:src="@mipmap/video_share"/>
 
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+        <!--<ImageView-->
+            <!--android:id="@+id/iv_video_collect"-->
+            <!--android:layout_width="40dp"-->
+            <!--android:layout_height="40dp"-->
+            <!--android:layout_margin="20dp"-->
+            <!--android:background="@drawable/sel_btn_press_bg"-->
+            <!--android:src="@drawable/sel_btn_video_collect"/>-->
+
+        <com.sackcentury.shinebuttonlib.ShineButton
+            android:id="@+id/iv_video_collect"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:layout_margin="20dp"
-            android:background="@drawable/sel_btn_press_bg"
-            android:src="@drawable/sel_btn_video_collect"/>
+            android:clickable="false"
+            app:btn_color="#8a8a8a"
+            app:btn_fill_color="#e91e63"/>
 
         <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:id="@+id/iv_video_download"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:layout_marginRight="20dp"
             android:background="@drawable/sel_btn_press_bg"
             android:src="@drawable/sel_btn_video_download"/>
