--- a/app/src/main/res/layout/layout_empty_loading.xml
+++ b/app/src/main/res/layout/layout_empty_loading.xml
@@ -3,7 +3,7 @@
              xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
-             android:background="@android:color/transparent">
+             android:background="@android:color/white">
 
     <RelativeLayout
         android:id="@+id/rl_empty_container"
