--- a/app/src/main/res/layout/layout_custom_toolbar.xml
+++ b/app/src/main/res/layout/layout_custom_toolbar.xml
@@ -1,9 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
-             android:layout_height="match_parent"
+             android:layout_height="wrap_content"
              android:layout_gravity="center">
 
+    <TextView
+        android:id="@+id/tv_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
+        android:gravity="left"
+        android:singleLine="true"
+        android:textSize="18sp"
+        android:textColor="@android:color/white"/>
+    
     <FrameLayout
         android:id="@+id/fl_layout"
         android:background="@color/colorPrimary"
