--- a/app/src/main/res/layout/adapter_welfare_photo.xml
+++ b/app/src/main/res/layout/adapter_welfare_photo.xml
@@ -4,7 +4,7 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
-    android:layout_margin="5dp"
+    android:layout_margin="@dimen/photo_margin_width"
     android:background="@mipmap/bg_card"
     android:orientation="vertical">
 
