--- a/app/src/main/res/layout/dialog_download.xml
+++ b/app/src/main/res/layout/dialog_download.xml
@@ -1,11 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:background="@android:color/white"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent">
+                xmlns:app="http://schemas.android.com/apk/res-auto"
+                android:background="@android:color/white"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+    <TextView
+        android:id="@+id/tv_download"
+        android:layout_width="match_parent"
+        android:text="开始下载"
+        android:gravity="center"
+        android:layout_alignParentBottom="true"
+        android:padding="10dp"
+        android:textColor="@color/colorAccent"
+        android:layout_height="wrap_content"/>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_above="@+id/tv_download"
+        android:background="#dddddd"
+        android:layout_height="1px"/>
+
+    <com.dl7.tag.TagLayout
+        android:id="@+id/tag_layout"
+        android:layout_above="@+id/tv_download"
+        android:layout_width="match_parent"
+        android:layout_margin="5dp"
+        style="@style/TagLayout.SingleChoice"
+        app:tag_view_bg_color_check="@android:color/white"
+        app:tag_view_border_color_check="@color/colorAccent"
+        app:tag_view_text_color_check="@color/colorAccent"
+        android:layout_height="wrap_content"/>
 
     <TextView
         android:id="@+id/tv_desc"
+        android:layout_above="@+id/tag_layout"
+        android:layout_marginBottom="5dp"
         android:layout_width="wrap_content"
         android:text="离线缓存"
         android:layout_marginLeft="10dp"
