--- a/app/src/main/res/layout/fragment_news.xml
+++ b/app/src/main/res/layout/fragment_news.xml
@@ -28,7 +28,7 @@
         <android.support.design.widget.TabLayout
             android:id="@+id/tab_layout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="@dimen/tab_layout_height"
             app:tabMode="scrollable"
             app:tabIndicatorColor="@android:color/white"/>
     </android.support.design.widget.AppBarLayout>
