--- a/app/src/main/res/layout/layout_common_list.xml
+++ b/app/src/main/res/layout/layout_common_list.xml
@@ -34,9 +34,8 @@
             <android.support.design.widget.TabLayout
                 android:id="@+id/tab_layout"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="@dimen/tab_layout_height"
                 app:tabMode="fixed"
-                app:tabGravity="center"
                 app:tabIndicatorColor="@android:color/white"/>
         </android.support.design.widget.AppBarLayout>
 
