--- a/app/src/main/res/layout/layout_no_data.xml
+++ b/app/src/main/res/layout/layout_no_data.xml
@@ -9,7 +9,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:drawablePadding="10dp"
-        android:drawableTop="@mipmap/ic_nocollection"
+        android:drawableTop="@mipmap/ic_no_collection"
         android:gravity="center"
         android:text="暂无收藏"/>
 </LinearLayout>
