添加Video收藏界面

--- a/app/src/main/res/layout/fragment_love_list.xml
+++ b/app/src/main/res/layout/fragment_love_list.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent">
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/rv_photo_list"
+        android:id="@+id/rv_love_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
