--- a/app/src/main/res/layout/adapter_video_love.xml
+++ b/app/src/main/res/layout/adapter_video_love.xml
@@ -3,13 +3,15 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="3dp"
-    android:background="@mipmap/bg_card">
+    android:layout_marginLeft="10dp"
+    android:layout_marginBottom="5dp"
+    android:layout_marginRight="20dp"
+    android:layout_marginTop="5dp">
 
     <ImageView
         android:id="@+id/iv_thumb"
-        android:layout_width="@dimen/video_thumb_width"
-        android:layout_height="56dp"
+        android:layout_width="120dp"
+        android:layout_height="67dp"
         android:scaleType="fitXY"
         android:src="@mipmap/icon_default_1"/>
 
@@ -18,10 +20,9 @@
         android:layout_toRightOf="@id/iv_thumb"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginLeft="10dp"
+        android:layout_marginBottom="5dp"
         android:layout_marginRight="10dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="10dp"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
 
     <TextView
