--- a/app/src/main/res/layout/fragment_love_list.xml
+++ b/app/src/main/res/layout/fragment_love_list.xml
@@ -15,6 +15,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:drawablePadding="10dp"
+        android:visibility="gone"
         android:drawableTop="@mipmap/ic_no_collection"
         android:gravity="center"
         android:text="暂无收藏"/>
