--- a/app/src/main/res/layout/activity_download.xml
+++ b/app/src/main/res/layout/activity_download.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.design.widget.CoordinatorLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.dl7.mvp.module.manage.download.DownloadActivity">
@@ -20,13 +20,13 @@
             app:layout_scrollFlags="scroll|enterAlways|snap"
             app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
 
-        <android.support.design.widget.TabLayout
+        <com.flyco.tablayout.SlidingTabLayout
             android:id="@+id/tab_layout"
             android:layout_width="match_parent"
             android:layout_height="@dimen/tab_layout_height"
-            app:tabMode="fixed"
-            app:tabGravity="center"
-            app:tabIndicatorColor="@android:color/white"/>
+            app:tl_indicator_color="@android:color/white"
+            app:tl_tab_padding="22dp"
+            app:tl_tab_space_equal="true"/>
     </android.support.design.widget.AppBarLayout>
 
     <android.support.v4.view.ViewPager
