--- a/app/src/main/res/layout/adapter_video_love.xml
+++ b/app/src/main/res/layout/adapter_video_love.xml
@@ -21,8 +21,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="5dp"
+        android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
-        android:layout_marginTop="10dp"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
 
     <TextView
