--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -34,5 +34,6 @@
     <dimen name="photo_small_height">90dp</dimen>
     <dimen name="photo_margin_width">1dp</dimen>
 
-    <dimen name="video_thumb_width">100dp</dimen>
+    <dimen name="video_thumb_width">128dp</dimen>
+    <dimen name="video_thumb_height">72dp</dimen>
 </resources>
