--- a/app/src/main/res/layout/layout_common_list.xml
+++ b/app/src/main/res/layout/layout_common_list.xml
@@ -29,12 +29,14 @@
                 app:layout_scrollFlags="scroll|enterAlways|snap"
                 app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
 
-            <android.support.design.widget.TabLayout
+            <com.flyco.tablayout.SlidingTabLayout
                 android:id="@+id/tab_layout"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/tab_layout_height"
-                app:tabMode="fixed"
-                app:tabIndicatorColor="@android:color/white"/>
+                app:tl_indicator_color="@android:color/white"
+                app:tl_indicator_margin_left="20dp"
+                app:tl_indicator_margin_right="20dp"
+                app:tl_tab_space_equal="true"/>
         </android.support.design.widget.AppBarLayout>
 
         <android.support.v4.view.ViewPager
