--- a/app/src/main/res/xml/pref_settings.xml
+++ b/app/src/main/res/xml/pref_settings.xml
@@ -14,7 +14,7 @@
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:key="setting_save_path"
             android:title="设置图片保存路径"
-            android:defaultValue="NewsApp"
+            android:defaultValue="MvpApp"
             android:summary="/sdcard:/NewsApp:"
             app:selection_type="dir_select"
             app:extensions="txt:pdf:"/>
