--- a/app/src/main/res/layout/adapter_video_cache.xml
+++ b/app/src/main/res/layout/adapter_video_cache.xml
@@ -3,17 +3,27 @@
                 xmlns:app="http://schemas.android.com/apk/res-auto"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="20dp"
-                android:layout_marginRight="20dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
                 android:layout_marginTop="10dp"
                 android:background="@mipmap/bg_card"
-                android:paddingBottom="20dp"
+                android:paddingBottom="15dp"
                 android:paddingLeft="10dp"
                 android:paddingRight="20dp"
                 android:paddingTop="10dp">
 
+    <CheckBox
+        android:id="@+id/cb_delete"
+        android:layout_width="wrap_content"
+        android:layout_centerVertical="true"
+        android:layout_gravity="center_vertical"
+        android:visibility="gone"
+        android:layout_marginRight="5dp"
+        android:layout_height="wrap_content"/>
+
     <LinearLayout
         android:id="@+id/ll_layout"
+        android:layout_toRightOf="@+id/cb_delete"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
@@ -37,6 +47,7 @@
 
     <TextView
         android:id="@+id/tv_load_size"
+        android:layout_toRightOf="@+id/cb_delete"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/ll_layout"
@@ -74,6 +85,7 @@
 
     <com.daimajia.numberprogressbar.NumberProgressBar
         android:id="@+id/pb_download"
+        android:layout_toRightOf="@+id/cb_delete"
         style="@style/download_progress"
         android:layout_below="@+id/btn_download"
         android:layout_marginLeft="10dp"
