--- a/app/src/main/res/layout/fragment_download.xml
+++ b/app/src/main/res/layout/fragment_download.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -13,10 +13,11 @@
         android:id="@+id/default_bg"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
+        android:layout_centerInParent="true"
         android:drawablePadding="10dp"
         android:visibility="gone"
         android:drawableTop="@mipmap/ic_no_download"
         android:gravity="center"
         android:text="暂无下载"/>
-</FrameLayout>
+
+</RelativeLayout>
