更新首页架构

--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -7,15 +7,11 @@
     android:layout_height="match_parent"
     tools:openDrawer="start">
 
-    <include layout="@layout/activity_main"/>
+    <FrameLayout
+        android:id="@+id/fl_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 
     <include layout="@layout/nav_layout"/>
-    <!--<android.support.design.widget.NavigationView-->
-    <!--android:id="@+id/nav_view"-->
-    <!--android:layout_width="wrap_content"-->
-    <!--android:layout_height="match_parent"-->
-    <!--android:layout_gravity="start"-->
-    <!--app:headerLayout="@layout/nav_header_home"-->
-    <!--app:menu="@menu/nav_drawer"/>-->
 
 </android.support.v4.widget.DrawerLayout>
