--- a/app/src/main/res/layout/fragment_news_main.xml
+++ b/app/src/main/res/layout/fragment_news_main.xml
@@ -16,6 +16,13 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <!--
+        scroll(0x00000001):要和滚动联动都要设置这个标志;
+        enterAlways(0x00000004):跟随滚动视图的上下滚动;
+        enterAlwaysCollapsed(0x00000008):当滚动视图滚动到底时，View只能以minHeight的高度滚入界面;
+        exitUntilCollapsed(0x00000002):跟随滚动视图的上下滚动,但滚出时会预留minHeight的高度，实际能滚动的距离为(layout_height-minHeight);
+        snap(0x00000010):根据滚动释放时的状态来自动执行完整的enter或者exit动画;
+        -->
         <android.support.design.widget.AppBarLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -26,17 +33,16 @@
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
                 android:background="?attr/colorPrimary"
+                app:navigationIcon="@mipmap/ic_nav"
                 app:layout_scrollFlags="scroll|enterAlways|snap"
                 app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
 
-            <com.flyco.tablayout.SlidingTabLayout
+            <android.support.design.widget.TabLayout
                 android:id="@+id/tab_layout"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/tab_layout_height"
-                app:tl_indicator_color="@android:color/white"
-                app:tl_indicator_margin_left="20dp"
-                app:tl_indicator_margin_right="20dp"
-                app:tl_tab_space_equal="true"/>
+                app:tabIndicatorColor="@android:color/white"
+                app:tabMode="scrollable"/>
         </android.support.design.widget.AppBarLayout>
 
         <android.support.v4.view.ViewPager
