--- a/app/src/main/res/layout/fragment_photo_main.xml
+++ b/app/src/main/res/layout/fragment_photo_main.xml
@@ -2,11 +2,9 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".module.news.home.MainActivity">
+    android:orientation="vertical">
 
     <!-- 遮挡状态栏透明的部分 -->
     <TextView
@@ -18,13 +16,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <!--
-        scroll(0x00000001):要和滚动联动都要设置这个标志;
-        enterAlways(0x00000004):跟随滚动视图的上下滚动;
-        enterAlwaysCollapsed(0x00000008):当滚动视图滚动到底时，View只能以minHeight的高度滚入界面;
-        exitUntilCollapsed(0x00000002):跟随滚动视图的上下滚动,但滚出时会预留minHeight的高度，实际能滚动的距离为(layout_height-minHeight);
-        snap(0x00000010):根据滚动释放时的状态来自动执行完整的enter或者exit动画;
-        -->
         <android.support.design.widget.AppBarLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -36,14 +27,36 @@
                 android:layout_height="?attr/actionBarSize"
                 android:background="?attr/colorPrimary"
                 app:layout_scrollFlags="scroll|enterAlways|snap"
-                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
+                app:navigationIcon="@mipmap/ic_nav"
+                app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
 
-            <android.support.design.widget.TabLayout
+                <FrameLayout
+                    android:id="@+id/fl_layout"
+                    android:layout_width="60dp"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="right|center_horizontal"
+                    android:background="@color/colorPrimary">
+
+                    <TextView
+                        android:id="@+id/iv_count"
+                        android:layout_width="22dp"
+                        android:layout_height="22dp"
+                        android:layout_gravity="center"
+                        android:background="@mipmap/btn_love"
+                        android:gravity="center"
+                        android:textColor="@android:color/white"
+                        android:textSize="10sp"/>
+                </FrameLayout>
+            </android.support.v7.widget.Toolbar>
+
+            <com.flyco.tablayout.SlidingTabLayout
                 android:id="@+id/tab_layout"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/tab_layout_height"
-                app:tabMode="scrollable"
-                app:tabIndicatorColor="@android:color/white"/>
+                app:tl_indicator_color="@android:color/white"
+                app:tl_indicator_margin_left="20dp"
+                app:tl_indicator_margin_right="20dp"
+                app:tl_tab_space_equal="true"/>
         </android.support.design.widget.AppBarLayout>
 
         <android.support.v4.view.ViewPager
