--- a/app/src/main/res/menu/nav_drawer.xml
+++ b/app/src/main/res/menu/nav_drawer.xml
@@ -9,19 +9,20 @@
 
         <item
             android:id="@+id/nav_photos"
-            android:icon="@android:drawable/ic_menu_gallery"
+            android:icon="@mipmap/ic_nav_picture"
             android:title="图片"/>
 
         <item
             android:id="@+id/nav_videos"
-            android:icon="@android:drawable/ic_media_play"
+            android:icon="@mipmap/ic_nav_video"
             android:title="视频"/>
     </group>
 
     <group android:checkableBehavior="none">
 
-        <item android:id="@+id/nav_setting"
-              android:icon="@android:drawable/ic_menu_manage"
-              android:title="设置"/>
+        <item
+            android:id="@+id/nav_setting"
+            android:icon="@mipmap/ic_nav_setting"
+            android:title="设置"/>
     </group>
 </menu>
