--- a/app/src/main/res/anim/slide_out_right.xml
+++ b/app/src/main/res/anim/slide_out_right.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <translate
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:duration="300"
+    android:duration="@android:integer/config_longAnimTime"
     android:fromXDelta="0"
     android:interpolator="@android:anim/accelerate_interpolator"
     android:toXDelta="100%p"/>
