--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -25,17 +25,15 @@
         <!--<item name="android:divider">@color/divider_line</item>-->
         <!--<item name="android:windowBackground">@color/window_background</item>-->
         <item name="android:windowBackground">@android:color/white</item>
-        <item name="android:windowIsTranslucent">true</item>
-        <item name="android:windowAnimationStyle">@style/slide_in_right</item>
+        <!--<item name="android:windowIsTranslucent">true</item>-->
+        <!--<item name="android:windowAnimationStyle">@style/slide_in_right</item>-->
     </style>
 
+    <!-- 右滑动进入/退出动画 -->
     <style name="slide_in_right" parent="@android:style/Animation.Translucent">
-        <item name="android:windowEnterAnimation">@anim/move_right_in_activity</item>
-        <item name="android:windowExitAnimation">@anim/move_right_out_activity</item>
+        <item name="android:windowEnterAnimation">@anim/slide_in_right</item>
+        <item name="android:windowExitAnimation">@anim/slide_out_right</item>
     </style>
-
-    <!--<style name="AppBaseTheme.LauncherAppTheme">-->
-    <!--</style>-->
 
     <style name="news_title">
         <item name="android:textAppearance">@style/TextAppearance.AppCompat.Headline</item>
