--- a/app/src/main/res/anim/zoom_out_entry.xml
+++ b/app/src/main/res/anim/zoom_out_entry.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- Special window zoom animation: this is the element that enters the screen,
-     it starts at 200% and scales down.  Goes with zoom_outxml. -->
-<set xmlns:android="http://schemas.android.com/apk/res/android"
-     android:interpolator="@android:anim/decelerate_interpolator">
+     it starts at 200% and scales down.  Goes with zoom_out_exit.xml -->
+<!-- 缩小进入 -->
+<set xmlns:android="http://schemas.android.com/apk/res/android">
+
     <scale
         android:duration="@android:integer/config_mediumAnimTime"
         android:fromXScale="2.0"
