--- a/app/src/main/res/layout/activity_photo_set.xml
+++ b/app/src/main/res/layout/activity_photo_set.xml
@@ -9,7 +9,7 @@
     android:background="@android:color/black"
     app:fix_height="100dp"
     app:mode="drag"
-    tools:context=".module.photo.photoset.PhotoSetActivity">
+    tools:context=".module.news.photoset.PhotoSetActivity">
 
     <android.support.v4.view.ViewPager
         android:id="@+id/vp_photo"
